--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -82,6 +82,12 @@ span {
 }
 
 .wrapper {
-    width: 90%;
     margin: 0 auto;
+    width: calc(100% - rem(48px));
+    @include mq(medium) {
+        width: calc(100% - rem(80px));
+    }
+    @include mq(large) {
+        width: calc(100% - rem(330px));
+    }
 }
