--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -10,8 +10,8 @@
     background-image: url(../assets/home/desktop/bg-pattern-hero-home.svg);
     background-repeat: no-repeat;
     background-position: top rem(104px) right rem(-300px);
-    @extend %br-15;
     @include mq(medium) {
+        border-radius:  rem(15px);
         background-position: top rem(120px) right rem(-120px);
     }
     @include mq(large) {
@@ -80,5 +80,15 @@
             padding-top: 0;
             position: static;
         }
+    }
+}
+
+.hero-wrapper {
+    margin: 0 auto;
+    @include mq(medium) {
+        width: calc(100% - rem(80px));
+    }
+    @include mq(large) {
+        width: calc(100% - rem(330px));
     }
 }
