--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -2,7 +2,6 @@
 
 header {
     height: rem(96px);
-    padding: 0 5%;
     background-color: white;
     @extend %flex;
     @extend %flex-ai-c;
